force-app/main/default/objects/Course_Invoice__c/Course_Invoice__c.object-meta.xml
<CustomObject>
    <label>Course Invoice</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Service Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>