force-app/main/default/objects/Course_Invoice__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Instructor__c</field>
            <operation>equals</operation>
            <valueField>Course__c.Instructor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Course__c</referenceTo>
    <relationshipName>Service_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>