force-app/main/default/objects/Course_Invoice__c/fields/Course_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Course_Opportunity__c</fullName>
    <label>Course Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Course_Opportunity__c.Instuctor__c</field>
            <operation>equals</operation>
            <valueField>$Source.Instructor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Course_Opportunity__c</referenceTo>
    <relationshipLabel>Course Invoices</relationshipLabel>
    <relationshipName>Service_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>