force-app/main/default/objects/Course_Invoice__c/fields/Expense_Invoice_Net__c.field-meta.xml
<CustomField>
    <fullName>Expense_Invoice_Net__c</fullName>
    <label>Expense Invoice Net</label>
    <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Course_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>