force-app/main/default/objects/Course_Invoice__c/fields/Expense_VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expense_VAT_Amount__c</fullName>
    <formula>Expense_Invoice_Net__c * Expense_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>