force-app/main/default/objects/Course_Invoice__c/fields/Retention__c.field-meta.xml
<CustomField>
    <fullName>Retention__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Retention</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>