force-app/main/default/objects/Course_Invoice__c/fields/Retention_Amount__c.field-meta.xml
<CustomField>
    <fullName>Retention_Amount__c</fullName>
    <formula>Teaching_Cost__c * Retention__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retention Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>