force-app/main/default/objects/Course_Invoice__c/fields/Teaching_Cost__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Cost__c</fullName>
    <formula>Course_Opportunity__r.Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teaching Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>