force-app/main/default/objects/Course_Invoice__c/validationRules/Date_Submission_Status_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Submission_Status_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c ,&quot;Submitted&quot; )  &amp;&amp;  ISNULL( Submitted_Date__c )</errorConditionFormula>
    <errorMessage>Submitted Date is REQUIRED to change the status to&quot;Submitted</errorMessage>
</ValidationRule>