force-app/main/default/objects/Course_Invoice__c/validationRules/Paid_Submission_Status_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_Submission_Status_rule</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c ,&quot;Paid&quot; )  &amp;&amp;  ISNULL(  Paid_Date__c  )</errorConditionFormula>
    <errorMessage>Paid Date is REQUIRED to change the invoice status to Paid</errorMessage>
</ValidationRule>